--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".activities.SerializableActivity4ResultActivity" />
         <activity android:name=".activities.ParcelableActivity4ResultActivity" />
         <activity android:name=".activities.ListViewActivity" />
+        <activity android:name=".activities.NewsActivity" />
         <activity android:name=".activities.NewsContentActivity" />
     </application>
 
