增加数据持久化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.DpSpFileActivity"></activity>
+        <activity android:name=".activities.DpDbCdActivity"></activity>
+        <activity android:name=".activities.DpSpFileActivity" />
         <activity android:name=".activities.DpFileActivity" />
         <activity android:name=".activities.BcEgMainActivity" />
         <activity android:name=".activities.BcEgActivity" />
