--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
     <uses-permission android:name="android.permission.VIBRATE" /> <!-- 振动权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 写SD权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/> -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".utils.AppCtxUtil"
@@ -18,9 +24,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.baidu.lbsapi.auth.API_KEY"
+            android:value="Taz1dgmN1DmlotU5w317c2gDgbLXLtsQ" />
+
+        <activity android:name=".activities.LbsBasicActivity" />
+
         <service
             android:name=".sv.MyIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity android:name=".activities.SvBasicActivity" />
 
@@ -38,6 +51,10 @@
             android:name=".sv.DownloadService"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name="com.baidu.com.location.f"
+            android:enabled="true"
+            android:process=":remote" />
 
         <activity android:name=".activities.NetGsonActivity" />
         <activity android:name=".activities.NetJsonActivity" />
