--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".egcw.activity.EgCoolWeatherActivity"></activity>
 
         <meta-data
             android:name="com.baidu.lbsapi.auth.API_KEY"
