--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".egcw.activity.EgCoolWeatherActivity"></activity>
+
+        <activity android:name=".egcw.activity.EgCoolWeatherMainActivity" />
+        <activity android:name=".egcw.activity.EgCoolWeatherActivity" />
 
         <meta-data
             android:name="com.baidu.lbsapi.auth.API_KEY"
