--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".egcw.sv.AutoUpdateService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity android:name=".egcw.activity.EgCoolWeatherMainActivity" />
         <activity android:name=".egcw.activity.EgCoolWeatherActivity" />
